# lazylora

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_SMELL_REMEDIATION.md  Cargo.toml  DEAD_CODE_AUDIT_COMPLETE.md  DEAD_CODE_AUDIT_RESULTS.md  DEAD_CODE_AUDIT_SUMMARY.md  FULL_DEAD_CODE_AUDIT_SUMMARY.md  LICENSE  README.md  REFACTORING_PLAN.md  STATE_MODULE_AUDIT_SUMMARY.md  commandments.md  index.html  install.ps1  install.sh  unattended.sh
.cargo/: config.toml
.github/: CNAME  dependabot.yml
.github/workflows/: ci.yaml  docs.yaml  release.yaml  release.yml
.tasks/: COORDINATOR_STAGE_1.md  COORDINATOR_STAGE_2.md  COORDINATOR_STAGE_3.md  README.md  STAGE_4_CLEANUP.md  WORKER_A_STAGE_0.md  WORKER_A_STAGE_1.5.md  WORKER_A_STAGE_2.5.md  WORKER_B_STAGE_0.md  WORKER_B_STAGE_1.5.md  WORKER_B_STAGE_2.5.md  WORKER_C_STAGE_0.md  WORKER_C_STAGE_1.5.md
docs/: book.toml
docs/src/: SUMMARY.md  building.md  cli.md  contributing.md  installation.md  introduction.md  keybindings.md  networks.md  quickstart.md  searching.md
scripts/: generate-aur-pkgbuild.sh
src/: algorand.rs  algorand_old.rs  app.rs  app_state.rs  boot_screen.rs  commands.rs  config.rs  constants.rs  event.rs  handler.rs  main.rs  network.rs  test_utils.rs  theme.rs  tui.rs  ui.rs  updater.rs  widgets.rs
src/client/: algo.rs  http.rs  indexer.rs  mod.rs  nfd.rs  node.rs
src/client/algo/: accounts.rs  applications.rs  assets.rs  blocks.rs  mod.rs  nfd.rs  search.rs  tests.rs  transactions.rs
src/components/: details.rs  helpers.rs  main_layout.rs  mod.rs  popups.rs
src/domain/: account.rs  application.rs  asset.rs  block.rs  error.rs  mod.rs  network.rs  nfd.rs  transaction.rs
src/domain/transaction/: mod.rs  parsing.rs  types.rs
src/state/: app_actions.rs  app_commands.rs  app_lifecycle.rs  app_messages.rs  app_navigation.rs  command_handler.rs  config.rs  data.rs  mod.rs  navigation.rs  tests.rs  ui_state.rs
src/state/platform/: clipboard.rs  mod.rs  paths.rs
src/state/ui_state/: mod.rs  popups.rs  search.rs
src/test_data/: app_call_txn.json
src/ui/: footer.rs  header.rs  helpers.rs  layout.rs  mod.rs
src/ui/components/: mod.rs  toast.rs
src/ui/panels/: mod.rs
src/ui/panels/details/: account.rs  application.rs  asset.rs  block.rs  mod.rs  transaction.rs
src/ui/popups/: confirm.rs  help.rs  message.rs  mod.rs  network.rs  network_form.rs  search.rs  search_results.rs
src/ui/popups/snapshots/: lazylora__ui__popups__network_form__tests__renders_form_snapshot.snap
src/ui/snapshots/: lazylora__ui__helpers__tests__all_block_states.snap
src/widgets/: helpers.rs  mod.rs
src/widgets/common/: address.rs  amount.rs  badge.rs  mod.rs
src/widgets/detail/: flow_diagram.rs  mod.rs  visual_card.rs
src/widgets/graph/: builders.rs  mod.rs  renderer.rs  tests.rs  txn_graph.rs  types.rs
src/widgets/graph/snapshots/: lazylora__widgets__graph__tests__app_call_with_inner_txns.snap  lazylora__widgets__graph__tests__asset_config_create.snap  lazylora__widgets__graph__tests__asset_freeze.snap  lazylora__widgets__graph__tests__asset_opt_in.snap  lazylora__widgets__graph__tests__asset_transfer.snap  lazylora__widgets__graph__tests__keyreg_point.snap  lazylora__widgets__graph__tests__payment_with_rekey.snap  lazylora__widgets__graph__tests__real_mainnet_app_call_inner_txns.snap  lazylora__widgets__graph__tests__real_mainnet_app_call_mixed_inner.snap  lazylora__widgets__graph__tests__real_mainnet_asset_close_to.snap  lazylora__widgets__graph__tests__real_mainnet_asset_config_create.snap  lazylora__widgets__graph__tests__real_mainnet_asset_config_reconfigure.snap  lazylora__widgets__graph__tests__real_mainnet_asset_freeze.snap  lazylora__widgets__graph__tests__real_mainnet_asset_opt_in.snap  lazylora__widgets__graph__tests__real_mainnet_asset_transfer.snap  lazylora__widgets__graph__tests__real_mainnet_keyreg_online.snap  lazylora__widgets__graph__tests__real_mainnet_payment.snap  lazylora__widgets__graph__tests__real_mainnet_payment_close_remainder_recent.snap  lazylora__widgets__graph__tests__real_testnet_asset_clawback.snap  lazylora__widgets__graph__tests__real_testnet_rekey.snap  lazylora__widgets__graph__tests__transaction_group.snap  lazylora__widgets__graph__txn_graph__tests__app_call_with_inner_txns.snap  lazylora__widgets__graph__txn_graph__tests__asset_config_create.snap  lazylora__widgets__graph__txn_graph__tests__asset_freeze.snap  (+22 more)
src/widgets/list/: block_list.rs  mod.rs  state.rs  txn_list.rs
(+16 files in other folders)
