[package]
name = "lazylora"
version = "0.3.0"
description = "Unofficial terminal user interface for Algorand Blockchain exploration"
authors = ["Altynbek Orumbayev <aorumbayev@pm.me>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/aorumbayev/lazylora"

[dependencies]
arboard = "3.3.0"
base64 = "0.21"
chrono = "0.4.40"
clap = { version = "4.5.9", features = ["derive"] }
color-eyre = "0.6.3"
confy = "0.6.1"
crossterm = "0.29.0"
git2 = { version = "0.20.1", optional = true }
log = "0.4"
env_logger = "0.10"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = ["json"] }
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "rustls",
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.bundle]
name = "LazyLora"
identifier = "dev.aorumbayev.lazylora"
icon = ["assets/icon.png"]
version = "0.1.0"
resources = ["assets"]
copyright = "Copyright (c) Altynbek Orumbayev 2024. All rights reserved."
category = "Developer Tool"
short_description = "Terminal UI for Algorand blockchain"
long_description = """
LazyLora is a terminal user interface for exploring the Algorand blockchain.
It provides a simple and intuitive way to browse blocks and transactions.
"""

[features]
default = []
vendored-openssl = ["git2/vendored-openssl"]
